Changes between nazghul-0.1.2 and nazghul-0.1.3

gmcnutt:

--The player can now sleep in beds when in town. Added a bed object.

--Added slimes. Hacked in a cloning effect to make them work, and added an
  immunities field to species to make them immune to poison. I actually had
  about 50% of a new effects system implemented when I gave up because of all
  the boring parsing code boilerplate, and it was going into overtime
  tonight. I saved my protoype header file for the effects system in the
  GHULSCRIPT documentation. Cloning is not really the ideal effect to start
  with anyway.

--Bugfix: field effects never worked outside of combat. Added support for
  them. Also modified the main game loop so that the player cannot give
  commands until somebody in the party is not asleep. If everyone is sleeping
  then the player has to wait until at least one party member wakes up.

--Bugfix: chests created via the load file (as opposed to chests created as
  corpse loot) were causing a seg fault when the player tried to open them. The
  problem is that they were being created as generic Objects, and not as
  specific Container Objects, so they didn't really support the open command. I
  don't plan on making a good solution for this until the 0.3.x series, but for
  now I added a hack to make it work and keep Sam happy :-)

--Bugfix: cursor was being shaded according to lighting conditions, but it
  should always be bright and clearly visible. I fixed this by changing the way
  the cursor is rendered so that now it is simply accepted as a special
  case. This allowed me to remove one or two unsightly hacks in the process.

--Bugfix: if you zoomed in while sailing the vehicle map was oriented
  wrong. This was because zoom-in is handled by combat and combat always
  rotated the vehicle maps so that ships were broadside to one another. I fixed
  this by adding a check to see if an opponent was specified and, if not, then